[package]
name = "cdls"
version = "0.1.0"
authors = ["smilexie <smilexie1113@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.20"
log = "0.4.17"
ncurses = "5.101.0"
nix = "0.25.0"
simplelog = "0.12.0"
